syntax = "proto3";

package golem.component;


message VersionedName {
  string name = 1;
  string version = 2;
}
